--- a/developer.html
+++ b/developer.html
@@ -1,9 +1,23 @@
 <!-- مائل ولونه أحمر p قم بجعل النص داخل وسم -->
-
+<p></p>
 <!-- class مرة باستخدام -->
-<p>رائع CSS و HTML أنا مطور</p>
+<p></p>
 
 <!-- id ومرة باستخدام -->
-<p>رائع CSS و HTML أنا مطور</p>
+
 
 <!-- stylesheet لا تنسى إنشاء ملف  -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Speed test</title>
+        <link rel="stylesheet" href="./developer.html"><link>
+    </head>
+    <body>
+        <p class="speed">رائع CSS و HTML أنا مطور</p>
+        
+        <p class="anood">رائع CSS و HTML أنا مطور</p>
+</body>
+</html>
